# htlc-atomic-swap-protocol

./: .gitignore  README.md  pyproject.toml
docs/: threat_model.md
examples/: successful_swap.py
src/atomic_swap/: chain.py  errors.py  htlc.py  swap.py
tests/: test_chain.py  test_htlc.py  test_swap.py
